--- a/business-intelligence.html
+++ b/business-intelligence.html
@@ -73,6 +73,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://boards.greenhouse.io/snowflakecomputing/jobs/4494831002'>Job Application for Director of Sales Business Intelligence  at Snowflake</a></h5> 
+<p><span class="badge badge-light">San Mateo, California United States</span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
 <h5><a href='https://boards.greenhouse.io/heycar/jobs/4497810002'>Job Application for Senior Business Intelligence Analyst (m/f/d) at heycar</a></h5> 
 <p><span class="badge badge-light">Berlin  Berlin</span></p>
 <p>Posted on: 2019-10-28</p>
@@ -174,7 +178,7 @@ Business Intelligence Analyst - SQL&amp; Tableau Job in London ?32-38K</a></h5>
 <p><span class="badge badge-light">San Diego, California</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://tui.join.com/jobs/463583-business-intelligence-specialist-m-w-d'>Job @ TUI Austria Holding (Wien): Business Intelli... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://tui.join.com/jobs/463583-business-intelligence-specialist-m-w-d'>Job @ TUI Austria Holding (Wien): Business Intelli... | JOIN</a></h5> 
 <p><span class="badge badge-light">Wien, ?sterreich</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -363,7 +367,7 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999697842870-junior-business-intelligence-analyst'>Bosch Group Junior Business Intelligence Analyst | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999697842870-junior-business-intelligence-analyst'>Bosch Group Junior Business Intelligence Analyst | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
@@ -416,11 +420,11 @@ Pittsburgh offices. Experience in R and Python is preferred.</p>
 <p><span class="badge badge-light">Greeley, Colorado</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
-<h5><a href='https://raisin.join.com/jobs/442579-junior-business-intelligence-engineer-m-f-d'>Job @ Raisin (Berlin): Junior Business Intelligenc... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://raisin.join.com/jobs/442579-junior-business-intelligence-engineer-m-f-d'>Job @ Raisin (Berlin): Junior Business Intelligenc... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany  Berlin</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://abbvie.referrals.selectminds.com/jobs/business-intelligence-architect-12416'>Business Intelligence Architect - AbbVie Careers</a></h5> 
+<h5><a href='https://abbvie.referrals.selectminds.com/jobs/business-intelligence-architect-12416'>Business Intelligence Architect - AbbVie Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
@@ -432,7 +436,7 @@ Pittsburgh offices. Experience in R and Python is preferred.</p>
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
-<h5><a href='https://rheindata.join.com/jobs/447662-business-intelligence-berater-m-w-d'>Job @ rheindata (Cologne): Business Intelligence-B... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://rheindata.join.com/jobs/447662-business-intelligence-berater-m-w-d'>Job @ rheindata (Cologne): Business Intelligence-B... | JOIN</a></h5> 
 <p><span class="badge badge-light">Cologne Cologne</span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
@@ -481,10 +485,6 @@ full time Business Intelligence (BI) analyst. The analyst will report within the
 <h5><a href='https://www.sarahwest.co.uk/jobs/business-intelligence-and-data-manager/'>Business Intelligence and Data Manager (VR/3396) - Sarah West</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-19</p>
-<hr/>
-<h5><a href='https://4re.referrals.selectminds.com/jobs/senior-software-engineer-sales-business-intelligence-27274'>Senior Software Engineer (Sales Business Intelligence) - RELX Careers</a></h5> 
-<p><span class="badge badge-light">Oxford</span></p>
-<p>Posted on: 2019-10-19</p>
 <hr/>
 
 
